--- a/Trabalho/pom.xml
+++ b/Trabalho/pom.xml
@@ -10,14 +10,14 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <build>
+     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>br.ufjf.dcc.artur.trabalho</mainClass>
+                            <mainClass>br.ufjf.dcc.artur.trabalho.Interface1</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
