--- a/Trabalho/pom.xml
+++ b/Trabalho/pom.xml
@@ -10,14 +10,21 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-     <build>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
+    <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>br.ufjf.dcc.artur.trabalho.Interface1</mainClass>
+                            <mainClass>br.ufjf.dcc.artur.trabalho.view.Janela</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
